--- a/userfrosting/templates/themes/default/account/reset-password.twig
+++ b/userfrosting/templates/themes/default/account/reset-password.twig
@@ -48,7 +48,7 @@
             </div>
         </div>
         <div class="form-group">
-            <input type="hidden" class="form-control" name="activation_token" value="{{activation_token}}">
+            <input type="hidden" class="form-control" name="secret_token" value="{{secret_token}}">
         </div>
         <div class="text-center">
             <button type="submit" class="btn btn-success">Submit New Password</button>
