--- a/userfrosting/templates/themes/default/mail/resend-activation.twig
+++ b/userfrosting/templates/themes/default/mail/resend-activation.twig
@@ -8,7 +8,7 @@
 <p>
 We have received a new activation request for your account with {{site.site_title}} ({{site.uri.public}}).  Please follow the link below to activate your account.  If your account is already active, please disregard this message.
 </p>
-<a href="{{site.uri.public}}/account/activate?activation_token={{user.activation_token}}">{{site.uri.public}}/account/activate?activation_token={{user.activation_token}}</a>
+<a href="{{site.uri.public}}/account/activate?secret_token={{user.secret_token}}">{{site.uri.public}}/account/activate?secret_token={{user.secret_token}}</a>
 </p>
 <p>
 With regards,<br>
