--- a/userfrosting/templates/themes/default/users/users.twig
+++ b/userfrosting/templates/themes/default/users/users.twig
@@ -49,9 +49,9 @@
                             <td data-num="{{user.sign_up_stamp | date('U')}}">
                                 {{user.sign_up_stamp | date("l")}}<br>{{user.sign_up_stamp | date("M j, Y g:i a")}}
                             </td>
-                            {% if user.last_sign_in_stamp %}
-                            <td data-num="{{user.last_sign_in_stamp | date('U')}}">
-                                {{user.last_sign_in_stamp | date("l")}}<br>{{user.last_sign_in_stamp | date("M j, Y g:i a")}}
+                            {% if user.last_sign_in_time %}
+                            <td data-num="{{user.last_sign_in_time | date('U')}}">
+                                {{user.last_sign_in_time | date("l")}}<br>{{user.last_sign_in_time | date("M j, Y g:i a")}}
                             </td>
                             {% else %}
                             <td data-num="0">
@@ -60,12 +60,12 @@
                             {% endif %}
                             <td>
                                 <div class="btn-group">
-                                    {% if user.enabled == 0 %}
+                                    {% if user.flag_enabled == 0 %}
                                         <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
                                             Disabled
                                             <span class="caret"></span>
                                         </button>
-                                    {% elseif user.active == 0 %}
+                                    {% elseif user.flag_verified == 0 %}
                                         <button type="button" class="btn btn-warning dropdown-toggle" data-toggle="dropdown">
                                             Unactivated
                                             <span class="caret"></span>
@@ -77,7 +77,7 @@
                                         </button>            
                                     {% endif %}
                                     <ul class="dropdown-menu" role="menu">
-                                        {% if user.active == 0 %}
+                                        {% if user.flag_verified == 0 %}
                                         <li>
                                             <a href="#" data-id="{{user.id}}" class="js-user-activate">
                                             <i class="fa fa-bolt"></i> Activate user
@@ -90,7 +90,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                        {% if user.enabled == 1 %}
+                                        {% if user.flag_enabled == 1 %}
                                             <a href="#" data-id="{{user.id}}" class="js-user-disable">
                                             <i class="fa fa-minus-circle"></i> Disable user
                                             </a>
@@ -214,7 +214,7 @@
                             var sortColumns = {
                                 "0" : "user_name",
                                 "1" : "sign_up_stamp",
-                                "2" : "last_sign_in_stamp",
+                                "2" : "last_sign_in_time",
                                 "3" : "enabled"
                             };
                             
