sign up time, too

--- a/userfrosting/templates/themes/default/users/users.twig
+++ b/userfrosting/templates/themes/default/users/users.twig
@@ -213,7 +213,7 @@
                             
                             var sortColumns = {
                                 "0" : "user_name",
-                                "1" : "sign_up_stamp",
+                                "1" : "sign_up_time",
                                 "2" : "last_sign_in_time",
                                 "3" : "enabled"
                             };
