I make you nice docs, yes?

--- a/userfrosting/templates/themes/default/components/common/js-snippets/user-table-columns.twig
+++ b/userfrosting/templates/themes/default/components/common/js-snippets/user-table-columns.twig
@@ -15,8 +15,8 @@
 </script>
 
 <script id="user-table-column-registered-since" type="text/x-handlebars-template">
-    <td data-num="{{dateFormat user.sign_up_stamp format='x'}}">
-        {{dateFormat user.sign_up_stamp format="dddd"}}<br>{{dateFormat user.sign_up_stamp format="MMM Do, YYYY h:mm a"}}
+    <td data-num="{{dateFormat user.sign_up_time format='x'}}">
+        {{dateFormat user.sign_up_time format="dddd"}}<br>{{dateFormat user.sign_up_time format="MMM Do, YYYY h:mm a"}}
     </td>
 </script>
 
