--- a/userfrosting/templates/themes/default/components/common/user-info-form.twig
+++ b/userfrosting/templates/themes/default/components/common/user-info-form.twig
@@ -60,7 +60,7 @@
                 <label>Registered Since</label>
                 <div class="input-group">
                     <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-                    <input type="text" class="form-control" name="sign_up_stamp" autocomplete="off" value="{{target_user.sign_up_stamp | date('M j, Y g:i a')}}" disabled>
+                    <input type="text" class="form-control" name="sign_up_time" autocomplete="off" value="{{target_user.sign_up_time | date('M j, Y g:i a')}}" disabled>
                 </div>
             </div>
         </div>
