--- a/userfrosting/templates/themes/default/components/common/js-snippets/user-table-columns.twig
+++ b/userfrosting/templates/themes/default/components/common/js-snippets/user-table-columns.twig
@@ -15,9 +15,15 @@
 </script>
 
 <script id="user-table-column-registered-since" type="text/x-handlebars-template">
+    {{#if user.sign_up_time }}    
     <td data-num="{{dateFormat user.sign_up_time format='x'}}">
         {{dateFormat user.sign_up_time format="dddd"}}<br>{{dateFormat user.sign_up_time format="MMM Do, YYYY h:mm a"}}
     </td>
+    {{ else }}
+    <td data-num="0">
+            <i>Unknown</i>
+    </td>
+    {{/if }}    
 </script>
 
 <script id="user-table-column-last-sign-in" type="text/x-handlebars-template">
