--- a/userfrosting/templates/themes/default/users/users.twig
+++ b/userfrosting/templates/themes/default/users/users.twig
@@ -46,9 +46,15 @@
                                     <i class="fa fa-envelope"></i> <a href="mailto:{{user.email}}">{{user.email}}</a>
                                 </div>
                             </td>
+                            {% if user.sign_up_time %}
                             <td data-num="{{user.sign_up_time | date('U')}}">
                                 {{user.sign_up_time | date("l")}}<br>{{user.sign_up_time | date("M j, Y g:i a")}}
                             </td>
+                            {% else %}
+                            <td data-num="0">
+                                    <i>Unknown</i>
+                            </td>
+                            {% endif %}                            
                             {% if user.last_sign_in_time %}
                             <td data-num="{{user.last_sign_in_time | date('U')}}">
                                 {{user.last_sign_in_time | date("l")}}<br>{{user.last_sign_in_time | date("M j, Y g:i a")}}
