--- a/userfrosting/templates/themes/default/account/create-password.twig
+++ b/userfrosting/templates/themes/default/account/create-password.twig
@@ -6,22 +6,25 @@
     but BEFORE the page itself is rendered. #}
     
     {% set page = page | merge({
-        "title"       : "Choose a New Password",
-        "description" : "Reset your UserFrosting password.",
+        "title"       : "Choose a password for your account",
+        "description" : "Set a password for your new account.",
         "active_page" : ""      
     }) %}    
     {{ parent() }}
 {% endblock %}
 
 {% block content %}
-    <h1>Reset Password</h1>
+    <h1>Create Password</h1>
     <p class="lead">
-        Please enter your new password to continue.
+        Welcome to {{site.site_title}}!  Please create a password for your new account.
     </p>
     {% include 'components/common/alerts.twig' %}
-    <form class="form-horizontal" role="form" name="reset_password" action="{{site.uri.public}}/account/set-password" method="post">
+    <form class="form-horizontal" role="form" name="create_password" action="{{site.uri.public}}/account/set-password" method="post">
+        <!-- Prevent browsers from trying to autofill the password field.  See http://stackoverflow.com/a/23234498/2970321 -->
+        <input type="text" style="display:none">
+        <input type="password" style="display:none">    
         <div class="form-group">
-            <label for="input_password" class="control-label col-sm-4">New Password</label>
+            <label for="input_password" class="control-label col-sm-4">Password</label>
             <div class="col-sm-8">
                 <div class="input-group">
                     <span class="input-group-addon"><i class="fa fa-fw fa-key"></i></span>                    
@@ -30,7 +33,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label for="input_passwordc" class="control-label col-sm-4">Confirm New Password</label>
+            <label for="input_passwordc" class="control-label col-sm-4">Confirm Password</label>
             <div class="col-sm-8">
                 <div class="input-group">
                     <span class="input-group-addon"><i class="fa fa-fw fa-key"></i></span>                
@@ -42,7 +45,7 @@
             <input type="hidden" class="form-control" name="secret_token" value="{{secret_token}}">
         </div>
         <div class="text-center">
-            <button type="submit" class="btn btn-success">Submit New Password</button>
+            <button type="submit" class="btn btn-success">Create and Login</button>
         </div>
     </form>
 {% endblock %}
@@ -52,7 +55,7 @@
         $(document).ready(function() {           
             // Process form 
             ufFormSubmit(
-                $("form[name='reset_password']"),
+                $("form[name='create_password']"),
                 {{ validators | raw }},
                 $("#userfrosting-alerts"),
                 function(data, statusText, jqXHR) {
