--- a/userfrosting/templates/themes/default/account/forgot-password.twig
+++ b/userfrosting/templates/themes/default/account/forgot-password.twig
@@ -16,20 +16,11 @@
 {% block content %}
     <h1>Reset Password</h1>
     <p class="lead">
-        Please enter your username and the email address you used to sign up.
+        Please enter the email address you used to sign up.
         A link with instructions to reset your password will be emailed to you.
     </p>
     {% include 'components/common/alerts.twig' %}
     <form class='form-horizontal' role='form' name='request_password_reset' action='{{site.uri.public}}/account/forgot-password' method='post'>
-        <div class="form-group">
-            <label for="input_user_name" class="control-label col-sm-4">Username</label>
-            <div class="col-sm-8">
-                <div class="input-group">
-                    <span class="input-group-addon"><i class="fa fa-fw fa-edit"></i></span>                    
-                    <input id="input_user_name" type="text" class="form-control" placeholder="Username" name="user_name">
-                </div>
-            </div>
-        </div>
         <div class="form-group">
             <label for="input_email" class="control-label col-sm-4">Email</label>
             <div class="col-sm-8">
