--- a/userfrosting/templates/themes/default/mail/password-reset.twig
+++ b/userfrosting/templates/themes/default/mail/password-reset.twig
@@ -9,11 +9,11 @@
 A lost password request has been submitted for your account with {{site.site_title}} ({{site.uri.public}}) on {{request_date}}.
 </p>
 <p>
-To confirm that you have sent this request, please click this link: <a href="{{site.uri.public}}/account/reset-password?secret_token={{user.secret_token}}&confirm=true">{{site.uri.public}}/account/reset-password?secret_token={{user.secret_token}}&confirm=true</a>
+If you or someone you trust sent this request, and you wish to set a new password, please click this link: <a href="{{site.uri.public}}/account/reset-password?secret_token={{user.secret_token}}&confirm=true">{{site.uri.public}}/account/reset-password?secret_token={{user.secret_token}}&confirm=true</a>
 </p>
 
 <p>
-If you did <b>not</b> initiate this request, please click this link to deny: <a href="{{site.uri.public}}/account/reset-password?secret_token={{user.secret_token}}&confirm=false">{{site.uri.public}}/account/reset-password?secret_token={{user.secret_token}}&confirm=false</a>
+If you did <b>not</b> expect this email, you may click this link to cancel the request: <a href="{{site.uri.public}}/account/reset-password?secret_token={{user.secret_token}}&confirm=false">{{site.uri.public}}/account/reset-password?secret_token={{user.secret_token}}&confirm=false</a>, or simply do nothing and the request will expire on its own.
 </p>
 <p>
 With regards,<br>
