--- a/_includes/030/footer-page.html
+++ b/_includes/030/footer-page.html
@@ -27,7 +27,17 @@
                         <a href="{{site.url}}/security">
                             Security
                         </a>
-                    </li>                          
+                    </li>
+                    <li>
+                        <a href="{{site.url}}/0.2.2">
+                            Version 0.2.2
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://gitter.im/alexweissman/UserFrosting">
+                            Chat
+                        </a>
+                    </li>                 
                 </ul>
             </div>
             <div class="col-lg-6">
