--- a/userfrosting/templates/themes/default/users/users.twig
+++ b/userfrosting/templates/themes/default/users/users.twig
@@ -16,8 +16,11 @@
     <div class="row">
         <div class="col-md-12">
         <div class='panel panel-primary'>
-        <div class='panel-heading'>
-            <h3 class='panel-title'><i class='{{icon}}'></i> {{box_title}}</h3>
+        <div class='panel-heading panel-heading-buttons clearfix'>
+            <h3 class='panel-title pull-left'><i class='{{icon}}'></i> {{box_title}}</h3>
+            <div class='pull-right'>
+                <button id="table-users-download" class="btn btn-sm btn-default">Download CSV</button>
+            </div>
         </div>
         <div class='panel-body'>
             <div class="table-responsive">
@@ -27,7 +30,7 @@
                             <th class="sorter-metatext" data-column-name="user_name">User/Info <i class="fa fa-sort"></i></th>
                             <th class="sorter-metanum" data-column-name="sign_up_time">Registered Since <i class="fa fa-sort"></i></th>
                             <th class="sorter-metanum" data-column-name="last_sign_in_time">Last Sign-in <i class="fa fa-sort"></i></th>
-                            <th>Status/Actions <i class="fa fa-sort"></i></th>
+                            <th data-column-name="flag_enabled">Status/Actions <i class="fa fa-sort"></i></th>
                         </tr>
                     </thead>
                     <tbody>
@@ -151,37 +154,11 @@
             var table_id = "table-users";
             
             $(document).ready(function() {
+                
                 // Callback for generating the AJAX url
                 function ajaxGenerateUrlCallback(table, url) {
-                    // set the page number and size in the URL
-                    table.config.pager.ajaxObject.data.size = table.config.pager.size;
-                    table.config.pager.ajaxObject.data.page = table.config.pager.page;
-                    
-                    var sortColumns = {
-                        "0" : "user_name",
-                        "1" : "sign_up_time",
-                        "2" : "last_sign_in_time",
-                        "3" : "enabled"
-                    };
-                    
-                    var sortOrders = {
-                        "0" : "asc",
-                        "1" : "desc"
-                    };
-                    
-                    // Set sort column and order in URL
-                    table.config.pager.ajaxObject.data.sort_field = sortColumns[table.config.sortList[0][0]];
-                    table.config.pager.ajaxObject.data.sort_order = sortOrders[table.config.sortList[0][1]];
-                    // Set filters in URL
-                    var filterList = $.tablesorter.getFilters(table);
-                    var filters = {};
-                    for (i = 0; i < filterList.length; i++){
-                        if (filterList[i]) {
-                            filters[sortColumns[i]] = filterList[i];
-                        }
-                    }
-                    table.config.pager.ajaxObject.data.filters = filters;
-                    
+                    var table_state = getTableStateVars(table);
+                    $.extend(table.config.pager.ajaxObject.data, table_state);
                     // Limit to a particular primary group
                     if (primary_group) {
                         table.config.pager.ajaxObject.data.primary_group = primary_group;
@@ -244,10 +221,19 @@
                 }
                 
                 function pagerCompleteCallback() {
-                    // Link buttons
+                    // Link row buttons
                     if (paginate_server_side) {
                         bindUserTableButtons($('#' + table_id));
                     }
+                    // Link CSV download button
+                    $("#table-users-download").on("click", function (){
+                        var state = getTableStateVars($('#' + table_id)[0]);
+                        state['format'] = "csv";
+                        delete state['page'];
+                        delete state['size'];
+                        var url = site['uri']['public'] + "/api/users?" + $.param( state );
+                        window.location = url;
+                    });
                 }
                 
                 ufTable('table-users', ajaxSetupCallback, pagerCompleteCallback);
