themes and config

--- a/userfrosting/templates/themes/default/dashboard.twig
+++ b/userfrosting/templates/themes/default/dashboard.twig
@@ -576,6 +576,6 @@ template engine for PHP
 <!-- /.row -->
 {% endblock %}
 {% block page_scripts %}
-    <script src="{{site.uri.js}}morris-data.js"></script>
+    <script src="{{site.uri.js}}/morris-data.js"></script>
     <script src="http://ecn.dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=7.0"></script>
 {% endblock %}
