--- a/userfrosting/templates/themes/default/errors/bad-config.twig
+++ b/userfrosting/templates/themes/default/errors/bad-config.twig
@@ -13,7 +13,7 @@
 {% block content %}
     <div class="container text-center">
         <h1>Your server doesn't seem to be configured properly.</h1>
-        <img src="{{site.uri.image}}eniac.png">
+        <img src="{{site.uri.image}}/eniac.png">
         <br><br>
         <p class="lead">Specifically, it looks like you are using Apache but don't have the <code>mod_rewrite</code> module enabled.  Please see the <a href="http://www.userfrosting.com/troubleshooting/#blank-page">troubleshooting guide</a> to get this sorted out.</p>
     </div> <!-- /container -->
