--- a/userfrosting/templates/themes/default/install/install-errors.twig
+++ b/userfrosting/templates/themes/default/install/install-errors.twig
@@ -17,7 +17,7 @@
         <br>
         <div class="row">
             <div class="col-lg-6">
-                <img src="{{site.uri.image}}stuck.jpg">
+                <img src="{{site.uri.image}}/stuck.jpg">
             </div>
             <div class="col-lg-6">
                 <p class="h3 text-center">Please fix the following errors, then <a href="{{site.uri.public}}/install">reload</a>.</p>
