--- a/userfrosting/templates/themes/default/install/install-ready.twig
+++ b/userfrosting/templates/themes/default/install/install-ready.twig
@@ -16,7 +16,7 @@
         <br>
         <div class="row">
             <div class="col-lg-6">
-                <img src="{{site.uri.image}}install-ready.jpg">
+                <img src="{{site.uri.image}}/install-ready.jpg">
             </div>
             <div class="col-lg-6">
                 {% for message in messages %}
