--- a/userfrosting/templates/themes/default/layouts/layout-simple.twig
+++ b/userfrosting/templates/themes/default/layouts/layout-simple.twig
@@ -61,7 +61,7 @@
             </div>
         </footer>
         
-        <script src="{{site.uri.js}}config.js" ></script>
+        <script src="{{site.uri.js}}/config.js" ></script>
         {% for item in includeJSBottom(page_group|default("common")) %}
           <script src="{{item}}" ></script>
         {% endfor %}
