--- a/userfrosting/templates/themes/nyx/layouts/layout-jumbotron.twig
+++ b/userfrosting/templates/themes/nyx/layouts/layout-jumbotron.twig
@@ -1,4 +1,4 @@
-{# This is the base layout template for "jumbotron" style pages (basically, all public (unauthenticated) pages). #}
+{# This is the base layout template for "nyx"-style unauthenticated pages. #}
 
 {# Default page properties.  You can override these in the `page` block of your child templates. #}
 {% set page = page | default({}) | merge({
@@ -10,7 +10,7 @@
 
 {% block page %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="nyx-cover">
     {% block head %}
     <head>
         <meta charset="utf-8">
@@ -29,6 +29,9 @@
           <link rel="stylesheet" href="{{item}}" type="text/css" >
         {% endfor %}
         
+        <!-- Theme stylesheet -->
+        <link rel="stylesheet" href="{{site.uri.css}}/theme.css?user={{user.id}}" type="text/css" >        
+        
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
@@ -43,28 +46,36 @@
     </head>
     {% endblock %}
     <body>
-    <div class="container">
-      {% include 'components/jumbotron/main-nav.twig' %}
-      <div class="jumbotron">
-        {% block content %}{% endblock %}
-      </div>	
-    </div> <!-- /container -->
+    <div class="site-wrapper">
+      <div class="site-wrapper-inner">
+        <div class="cover-container">
+          
+          {% include 'components/main-nav.twig' %}
+          
+          <div class="inner cover">
+            {% block content %}{% endblock %}
+          </div>
+          
+          <div class="mastfoot">
+            <div class="inner">
+                <div class="row">
+                    <div class="col-lg-4 col-lg-offset-2 text-left">
+                        &copy; <a href="{{site.uri.public}}">{{site.site_title}}</a>, {{ "now"|date("Y") }}
+                    </div>
+                    <div class="col-lg-6 text-left">
+                        <p>Built with <a href="http://www.userfrosting.com">UserFrosting</a>.</p>
+                         <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+                    </div>        
+                </div>
+               
+            </div>
+          </div>          
+        </div>
+      </div>
+    </div> <!-- /site-wrapper -->
     
     {# This block is for dynamic fragments of code that lie outside of the main DOM #}
     {% block fragments %}{% endblock %}
-    
-    <footer>
-        <div class="container">
-          <div class="row">
-              <div class="col-sm-6 text-center">
-                  &copy; <a href="{{site.uri.public}}">{{site.site_title}}</a>, {{ "now"|date("Y") }}
-              </div>
-              <div class="col-sm-6 text-center">
-                  Built with <a href="http://www.userfrosting.com">UserFrosting</a>.
-              </div>        
-          </div>
-        </div>
-    </footer>
     
     <script src="{{site.uri.js}}/config.js" ></script>
     {% for item in includeJSBottom(page_group|default("common")) %}
@@ -72,6 +83,6 @@
     {% endfor %}
     {# This block allows you to create page-specific Javascript in a child template #}
     {% block page_scripts %}{% endblock %}    
-  </body>
+    </body>
 </html>
 {% endblock %}
