--- a/userfrosting/templates/themes/default/groups/groups.twig
+++ b/userfrosting/templates/themes/default/groups/groups.twig
@@ -24,11 +24,11 @@
                     <table id="table-groups" class="tablesorter table table-bordered table-hover table-striped tablesorter-bootstrap" data-sortlist="[[0, 0]]">
                         <thead>
                             <tr>
-                                <th class="sorter-metatext">Group Name <i class="fa fa-sort"></i></th>
-                                <th class="sorter-metatext">Landing Page <i class="fa fa-sort"></i></th>
-                                <th class="sorter-metatext">New User Title <i class="fa fa-sort"></i></th>
-                                <th class="sorter-metatext">Theme <i class="fa fa-sort"></i></th>
-                                <th>Actions <i class="fa fa-sort"></i></th>
+                                <th class="sorter-metatext" data-column-name="group_name">Group Name <i class="fa fa-sort"></i></th>
+                                <th class="sorter-metatext" data-column-name="landing_page">Landing Page <i class="fa fa-sort"></i></th>
+                                <th class="sorter-metatext" data-column-name="new_user_title">New User Title <i class="fa fa-sort"></i></th>
+                                <th class="sorter-metatext" data-column-name="theme">Theme <i class="fa fa-sort"></i></th>
+                                <th data-column-name="flag_can_delete">Actions <i class="fa fa-sort"></i></th>
                             </tr>
                         </thead>
                         <tbody>
