--- a/_includes/022/header.html
+++ b/_includes/022/header.html
@@ -8,10 +8,10 @@
         <li class="dropdown dropdown-primary">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class='fa fa-download'></i> Get UserFrosting <b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><a href="https://github.com/alexweissman/UserFrosting/"><i class='fa fa-github'></i> View on Github</a></li>
+            <li><a href="https://github.com/userfrosting/UserFrosting/"><i class='fa fa-github'></i> View on Github</a></li>
             <li class="divider"></li>              
-            <li><a href="https://github.com/alexweissman/UserFrosting/zipball/master"><i class='fa fa-file-archive-o'></i> Download as a .zip file</a></li>
-            <li><a href="https://github.com/alexweissman/UserFrosting/tarball/master"><i class='fa fa-file-archive-o'></i> Download as a tar.gz file</a></li>
+            <li><a href="https://github.com/userfrosting/UserFrosting/zipball/master"><i class='fa fa-file-archive-o'></i> Download as a .zip file</a></li>
+            <li><a href="https://github.com/userfrosting/UserFrosting/tarball/master"><i class='fa fa-file-archive-o'></i> Download as a tar.gz file</a></li>
           </ul>
         </li>
         <li><a href="http://uf-demo.alexanderweissman.com/">Demo (v0.3.0)</a></li>
@@ -35,7 +35,7 @@
         <li><a href="{{site.url}}/contributors.html">Contributors</a></li>
         </ul>
       <ul class="nav navbar-nav navbar-right">  
-        <li style="padding-top: 10px;"><iframe src="http://ghbtns.com/github-btn.html?user=alexweissman&repo=userfrosting&type=watch&count=true&size=large" frameborder="0" scrolling="0" width="144" height="30"></iframe></li>
+        <li style="padding-top: 10px;"><iframe src="http://ghbtns.com/github-btn.html?user=userfrosting&repo=userfrosting&type=watch&count=true&size=large" frameborder="0" scrolling="0" width="144" height="30"></iframe></li>
       </ul>
       
     </nav>
