--- a/userfrosting/templates/themes/default/dashboard.twig
+++ b/userfrosting/templates/themes/default/dashboard.twig
@@ -23,6 +23,7 @@
 <div class="row">
     <div class="col-lg-12">            
         <div class="alert alert-success alert-dismissable">
+          <span class="glyphicon glyphicon-blackboard" aria-hidden="true"></span>
           <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
           Welcome to {{site.site_title}}!  The dashboard and admin account features are based on the SB Admin 2 template by <a class="alert-link" href="http://startbootstrap.com">Start Bootstrap</a>. Other key frameworks and plugins used in this system are:
           <br><a class="alert-link" href='http://www.slimframework.com/'>Slim</a>: a microframework for PHP
