--- a/userfrosting/templates/themes/default/layouts/layout-dashboard.twig
+++ b/userfrosting/templates/themes/default/layouts/layout-dashboard.twig
@@ -16,7 +16,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="{{page.description}}">
-        <meta name="author" content="{{site.author}}">
+        <meta name="author" content="{{page.author}}">
         <meta name="{{csrf_key}}" content="{{csrf_token}}"> 
         
         <title>{{site.site_title}} | {{page.title}}</title>
