update asset paths

--- a/app/templates/components/footer.html.twig
+++ b/app/templates/components/footer.html.twig
@@ -19,7 +19,7 @@
 <!-- Load jQuery -->
 <script src="//code.jquery.com/jquery-2.1.1.min.js" ></script>
 <!-- Fallback if CDN is unavailable -->
-<script>window.jQuery || document.write('<script src="{{ assets.url('assets://js/jquery-2.1.1.js', true) }}"><\/script>')</script>
+<script>window.jQuery || document.write('<script src="{{ assets.url('assets://jquery-2.1.1/jquery.js', true) }}"><\/script>')</script>
 
 {{ assets.js() | raw }}
 
