--- a/userfrosting/templates/themes/default/components/dashboard/menus/topbar.twig
+++ b/userfrosting/templates/themes/default/components/dashboard/menus/topbar.twig
@@ -1,4 +1,5 @@
 <ul class="nav navbar-top-links navbar-right">
+	{% for item in applyHook("nav_topbar") %}{% include item %}{% endfor %}
     <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">
             <i class="fa fa-envelope fa-fw"></i>  <i class="fa fa-caret-down"></i>
