--- a/userfrosting/templates/themes/default/install/install-ready.twig
+++ b/userfrosting/templates/themes/default/install/install-ready.twig
@@ -14,11 +14,9 @@
     <div class="container">
         <h1 class = "text-center">Congratulations.<br><small>UserFrosting is ready to rock.</small></h1>
         <br>
-        <div class="row">
-            <div class="col-lg-6">
-                <img src="{{site.uri.image}}/install-ready.jpg">
-            </div>
-            <div class="col-lg-6">
+        <div class="row"> 
+			<img  class="col-xs-12 col-sm-4 col-lg-6" style="margin-bottom:14px" src="{{site.uri.image}}/install-ready.jpg"> 
+            <div class="col-xs-12 col-sm-8 col-lg-6">
                 {% for message in messages %}
                     <div class="list-group">
                       <div class="list-group-item list-group-item-{{message.class}}">
