--- a/userfrosting/templates/themes/default/install/install-master.twig
+++ b/userfrosting/templates/themes/default/install/install-master.twig
@@ -21,7 +21,7 @@
         </div>
         <form name="register" method="post" action="{{site.uri.public}}/install/master" class="form-horizontal">
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col-xs-12">
                     <div class="form-group">
                         <label class="control-label  col-sm-4">Username</label>
                         <div class="col-sm-8">
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col-xs-12">
                     <div class="form-group">
                         <label class="control-label col-sm-4">Display Name</label>
                         <div class="col-sm-8">
@@ -47,7 +47,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col-xs-12">
                     <div class="form-group">
                         <label class="control-label col-sm-4">Email</label>
                         <div class="col-sm-8">
@@ -60,7 +60,7 @@
                 </div>
             </div>		  
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col-xs-12">
                     <div class="form-group">
                         <label class="control-label col-sm-4">Password</label>
                         <div class="col-sm-8">
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col-xs-12">
                     <div class="form-group">
                         <label class="control-label col-sm-4">Confirm password</label>
                         <div class="col-sm-8">
@@ -86,7 +86,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col-xs-12">
                     <div class="form-group">
                         <label class="control-label col-sm-4">Configuration Token</label>
                         <div class="col-sm-8">
