--- a/userfrosting/templates/themes/default/install/install-errors.twig
+++ b/userfrosting/templates/themes/default/install/install-errors.twig
@@ -16,7 +16,9 @@
         <h1 class = "text-center">Something's not right here.</h1>
         <br>
         <div class="row">
-            <img class="col-xs-12 col-sm-4 col-md-6" src="{{site.uri.image}}/stuck.jpg"> 
+			<div  class="col-xs-12 col-sm-4 col-md-6" >
+				<img class="img-fluid" src="{{site.uri.image}}/stuck.jpg"> 
+			</div>
             <div class="col-xs-12 col-sm-8 col-md-6">
                 <p class="h3 text-center">Please fix the following errors, then <a href="{{site.uri.public}}/install">reload</a>.</p>
                 {% for message in messages %}
