--- a/userfrosting/templates/themes/default/install/install-errors.twig
+++ b/userfrosting/templates/themes/default/install/install-errors.twig
@@ -17,7 +17,7 @@
         <br>
         <div class="row">
             <div  class="col-xs-12 col-sm-4 col-md-6" >
-                <img class="img-fluid" src="{{site.uri.image}}/stuck.jpg">
+                <img class="img-fluid m-x-auto" src="{{site.uri.image}}/stuck.jpg">
             </div>
             <div class="col-xs-12 col-sm-8 col-md-6">
                 <p class="h3 text-center">Please fix the following errors, then <a href="{{site.uri.public}}/install">reload</a>.</p>
