--- a/userfrosting/templates/themes/default/install/install-ready.twig
+++ b/userfrosting/templates/themes/default/install/install-ready.twig
@@ -14,9 +14,9 @@
     <div class="container">
         <h1 class = "text-center">Congratulations.<br><small>UserFrosting is ready to rock.</small></h1>
         <br>
-        <div class="row">
+        <div class="row p-b-1">
             <div  class="col-xs-12 col-sm-4 col-lg-6" >
-                <img class="img-fluid m-b-1" src="{{site.uri.image}}/install-ready.jpg">
+                <img class="img-fluid m-b-1 m-x-auto" src="{{site.uri.image}}/install-ready.jpg">
             </div>
             <div class="col-xs-12 col-sm-8 col-lg-6">
                 {% for message in messages %}
